--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.19",
     "@kinde-oss/kinde-auth-nextjs": "^2.2.10",
-    "@prisma/client": "^5.13.0",
+    "@prisma/client": "^5.14.0",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -28,9 +28,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
+    "jquery": "^3.7.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.372.0",
+    "nanoid": "^5.0.7",
     "next": "^14.2.3",
-    "prisma": "^5.13.0",
+    "next-auth": "^4.24.7",
+    "prisma": "^5.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dom-confetti": "^0.2.0",
