--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@uploadthing/react": "^6.5.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "express": "^4.19.2",
     "framer-motion": "^11.1.7",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
@@ -51,6 +52,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18",
